# data-analytics-tech-challenge-2

./: .gitignore  AGENTS.md  README.md  TASK07_FINAL_REPORT.md  download_dataset.py  example_preprocessing.py  pyproject.toml  requirements.txt  results_summary.md  test_feature_importance.py  test_model_evaluation.py  test_models.py  test_models_simple.py  test_preprocessing.py
data/processed/: train.csv
notebooks/: eda.ipynb  model_evaluation.ipynb  model_evaluation.py  train_models.ipynb
results/eda/: eda_summary_test.txt
results/feature_importance/: feature_importance_summary.md
src/fase_2/: FEATURE_IMPORTANCE_README.md  MODELS_README.md  MODEL_EVALUATOR_README.md  __init__.py  __main__.py  data_loader.py  feature_importance.py  model_evaluator.py  models.py  preprocessor.py  target_encoder.py
