[project]
name = "fase-2"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10,<3.11"
dependencies = [
    "jupyter>=1.1.1",
    "lightgbm>=4.6.0",
    "matplotlib>=3.10.9",
    "numpy>=2.2.6",
    "pandas>=2.3.3",
    "scikit-learn>=1.7.2",
    "seaborn>=0.13.2",
    "shap>=0.49.1",
]

[project.scripts]
fase-2 = "fase_2:main"

[build-system]
requires = ["uv_build>=0.11.13,<0.12.0"]
build-backend = "uv_build"
